@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.275 2005/12/14 10:00:05 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.276 2005/12/15 11:18:21 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -39,6 +39,9 @@ PH/07 Two small changes when running in the test harness: increase delay when
       passing a TCP/IP connection to a new process, in case the original
       process has to generate a bounce, and remove special handling of
       127.0.0.2 (sic), which is no longer necessary.
+
+PH/08 Changed debug output of dbfn_open() flags from numbers to names, so as to
+      be the same on different OS.
 
 
 Exim version 4.60
